--- a/mytimetable/webtimetable/templates/webtimetable/timetable.html
+++ b/mytimetable/webtimetable/templates/webtimetable/timetable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head> 
         <title> TIMETABLE </title>
     </head>
@@ -9,11 +9,11 @@
             <center>
             <table border="2"> 
                 <tr>
-                    <td align="center" colspan="10">TIMETABLE</td>
+                    <td align="center" colspan="6">TIMETABLE</td>
                 </tr>
                 <tr>
-                    <td colspan="5">REGISTER NO : 22004355</td>
-                    <td colspan="5">NAME : JEGADEESH</td>
+                    <td colspan="3">REGISTER NO : 22004355</td>
+                    <td colspan="3">NAME : JEGADEESH</td>
                 </tr>
 
                 <tr>
